# 2d-dt

./: CMakeLists.txt  README.md
build_scripts/: debug.sh  release.sh
config/: .gitignore  config.json
config/templates/: config.json
job_scripts/: array_degree.sh  array_ensemble.sh  debug_vertex_degree.sh  repeat.sh
simulations/summary/: simulation_2022-10-04_15-06-50.txt  simulation_2022-10-10_19-33-37.txt  simulation_2022-10-10_19-37-23.txt  simulation_2022-10-10_19-44-26.txt  simulation_2022-10-10_19-57-06.txt  simulation_2022-10-10_20-38-36.txt
src/: CMakeLists.txt  main.cpp
src/argumenthandler/: CMakeLists.txt  argumenthandler.cpp  argumenthandler.hpp
src/factory/: CMakeLists.txt  factory.cpp  factory.hpp  growthfactory.cpp  growthfactory.hpp  tetrahedronfactory.cpp  tetrahedronfactory.hpp
src/jsonutilities/: CMakeLists.txt  jsonutilities.hpp
src/label/: CMakeLists.txt  edgelabel.cpp  edgelabel.hpp  label.cpp  label.hpp  trianglelabel.cpp  trianglelabel.hpp  vertexlabel.cpp  vertexlabel.hpp
src/misc/: CMakeLists.txt  histogram.cpp  histogram.hpp
src/observer/: CMakeLists.txt  averagespheredistance.cpp  averagespheredistance.hpp  dualhausdorffobserver.cpp  dualhausdorffobserver.hpp  hausdorffobserver.cpp  hausdorffobserver.hpp  observer.cpp  observer.hpp  selfaveragespheredistance.cpp  selfaveragespheredistance.hpp  vertexdegreeobserver.cpp  vertexdegreeobserver.hpp  vertexgraphobserver.cpp  vertexgraphobserver.hpp
src/rng/: CMakeLists.txt  global_engine.hpp
src/runner/: CMakeLists.txt  progressmanager.cpp  progressmanager.hpp  runner.cpp  runner.hpp
src/simplices/: CMakeLists.txt  edge.cpp  edge.hpp  simplex.cpp  simplex.hpp  triangle.cpp  (+3 more)
tests/: CMakeLists.txt  alltests.cpp
(+25 files in other folders)
